optimized images, added meta tags and upgraded to bootstrap 3.4

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>TEDxHITKolkata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="TED is a nonprofit organization devoted to Ideas Worth Spreading."
+    />
+    <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link
       rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+      integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+"
       crossorigin="anonymous"
     />
     <link
@@ -39,7 +43,7 @@
     <div id="landing-overlay">
       <img
         id="landing-overlay-logo"
-        src="img/logo.png"
+        src="img/logo.webp"
         class="img-responsive"
       />
       <div id="countdown-timer">
@@ -120,9 +124,9 @@
           <hr class="small-hr" />
           <div id="">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div class="card" data-toggle="modal" data-target="#myModal">
+              <div class="card" data-toggle="modal" data-target="#modal-one">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/1.jpg" /></div>
+                  <div class="img"><img src="img/speakers/1.webp" /></div>
                   <h2>
                     Sanjiv Mehta<br /><span
                       >Country Manager, HP <br />
@@ -131,7 +135,9 @@
                   </h2>
                   <hr />
                   <p>
-                    Sanjiv Mehta has 30+ Years in IT Industry with experience in Technology Sales, Business Development, Strategy & Planning with operation in multiple geographies. 
+                    Sanjiv Mehta has 30+ Years in IT Industry with experience in
+                    Technology Sales, Business Development, Strategy & Planning
+                    with operation in multiple geographies.
                   </p>
                   <hr />
                 </div>
@@ -139,16 +145,21 @@
             </div>
 
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div class="card">
+              <div
+                class="card"
+                class="card"
+                data-toggle="modal"
+                data-target="#modal-two"
+              >
                 <div class="box">
-                  <div class="img"><img src="img/speakers/2.jpg" /></div>
+                  <div class="img"><img src="img/speakers/2.webp" /></div>
                   <h2>
-                    Madiha Ahmed<br /><span>outh Mentor at OpenHearts<br />Blogger</span>
+                    Madiha Ahmed<br /><span>Youth Mentor at OpenHearts</span>
                   </h2>
                   <hr />
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et.
+                    Madiha is a TeachSDGs Ambassador, Mentor at Global Thinkers
+                    Mentors Forum, Aspire Foundation and Jobs For Her.<br /><br />
                   </p>
                   <hr />
                   <!--
@@ -175,10 +186,11 @@
                 </div>
               </div>
             </div>
+            <!--
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/3.jpg" /></div>
+                  <div class="img"><img src="img/speakers/3.webp" /></div>
                   <h2>
                     Sweta Ojha<br /><span
                       >Writer <br />
@@ -197,7 +209,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/4.jpg" /></div>
+                  <div class="img"><img src="img/speakers/4.webp" /></div>
                   <h2>
                     Mita Tarafder <br /><span
                       >Senior Principal Scientist<br />
@@ -213,11 +225,12 @@
                 </div>
               </div>
             </div>
+            -->
           </div>
         </div>
 
         <figure class="no-padding no-margin">
-          <img src="img/banner.jpg" class="banner" />
+          <img src="img/banner.webp" class="banner" />
           <figcaption>
             <small style="color:#ffffff;"
               >linkedin.com/in/ayushagarwal28/</small
@@ -297,19 +310,28 @@
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
               <p>
                 FOLLOW US
-                <a href="https://facebook.com/tedxhitkolkata/" target="_blank"
+                <a
+                  rel="noreferrer noopener"
+                  href="https://facebook.com/tedxhitkolkata/"
+                  target="_blank"
                   ><i class="fab fa-facebook"></i
                 ></a>
-                <a href="https://twitter.com/hitkolkata" target="_blank"
+                <a
+                  rel="noreferrer noopener"
+                  href="https://twitter.com/hitkolkata"
+                  target="_blank"
                   ><i class="fab fa-twitter"></i
                 ></a>
-                <a href="https://instagram.com/tedx_hitkolkata/" target="_blank"
+                <a
+                  rel="noreferrer noopener"
+                  href="https://instagram.com/tedx_hitkolkata/"
+                  target="_blank"
                   ><i class="fab fa-instagram" aria-hidden="true"></i
                 ></a>
               </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-              <p><a href="mailto:alfarhanzahedi@gmail.com">EMAIL US</a></p>
+              <p><a href="mailto:tedxhitkolkata@gmail.com">EMAIL US</a></p>
             </div>
           </div>
           <hr
@@ -331,7 +353,10 @@
               <h4 class="spacer">&nbsp;</h4>
               <p>
                 <span class="font-bolder"
-                  ><a href="http://heritageit.edu" target="_blank"
+                  ><a
+                    rel="noreferrer noopener"
+                    href="http://heritageit.edu"
+                    target="_blank"
                     >Heritage Institute of Technology</a
                   ></span
                 ><br />
@@ -357,14 +382,14 @@
       </footer>
     </div>
     <div id="modals-speaker" class="font__open-sans">
-      <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal fade" id="modal-one" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">
                 &times;
               </button>
-              <img src="img/speakers/1.jpg" />
+              <img src="img/speakers/1.webp" />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Sanjiv Mehta</h3>
                 Country Manager, HP <br />
@@ -373,15 +398,72 @@
             </div>
             <div class="modal-body">
               <p>
-                Sanjiv Mehta is an award winning, experienced global business leader & technologist, 
-                a go-to-marketer, a sales coach & mentor, and a speaker on CNBC. <br/>
-                He has 30+ years in IT Industry with an immense experience in technology sales, business development, 
-                strategy & planning with operation in multiple geographies.
-                He has done his masters in Marketing & Economics and E-MBA from Stanford. <br/>
-                His favourite quote: <br /> 
-                <q><i>Start by doing what’s necessary; <br/>
-                Then do what’s possible; <br/>
-                And suddenly you’re doing the impossible.</i></q>
+                Sanjiv Mehta is an award winning, experienced global business
+                leader & technologist, a go-to-marketer, a sales coach & mentor,
+                and a <b>speaker on CNBC.</b> <br /><br />
+                He has 30+ years in IT Industry with an immense experience in
+                technology sales, business development, strategy & planning with
+                operation in multiple geographies. He has done his masters in
+                <b>Marketing & Economics</b> and E-MBA from Stanford.
+                <br /><br />
+                His favourite quote: <br /><br />
+                <q
+                  ><i
+                    >Start by doing what’s necessary; <br />
+                    Then do what’s possible; <br />
+                    And suddenly you’re doing the impossible.</i
+                  ></q
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="modals-speaker" class="font__open-sans">
+      <div class="modal fade" id="modal-two" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+                &times;
+              </button>
+              <img src="img/speakers/2.webp" />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Madiha Ahmed</h3>
+                Youth Mentor at OpenHearts <br />
+                Early Childhood Coding Instructor at WhiteHat Jr
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Madiha Ahmed is a Parent and Youth Mentor at OpenHearts, Early
+                Childhood Coding Instructor at WhiteHat Jr. She is a Trainer for
+                projects by National Stock Exchange and Cello for students,
+                Junior Horlicks for parents, Dell Aarambh for teachers.
+                <br /><br />
+                Madiha is a <b>TeachSDGs Ambassador</b>, Mentor at Global
+                Thinkers Mentors Forum, Aspire Foundation and Jobs For Her.<br /><br />
+                Recently, she was a Speaker at <b>Edu Cafe 2018</b> in Dubai,
+                the largest education and career fest for high school students
+                in the Middle East for Indians where she conducted 3 separate
+                sessions for youth, parents and teachers. <br /><br />
+                Madiha is a Social Entrepreneur and CEO at YouEd -Empowering YOU
+                to LEAD, a social enterprise where she heads SAHLE Hub (Stay At
+                Home Learning and Earning hub) to empower women through
+                leadership and communication skills and MAIN INDIA (Main as in
+                me) for kids, teens, youth, parents and teachers on character
+                building and nation building.<br /><br />
+                An Author of <b>"13 Inspirations@23"</b> The story of a young
+                woman who said no to being average," her book is soon to be
+                published.<br />
+                Learn more about her at
+                <a
+                  rel="noreferrer noopener"
+                  href="http://www.madiha.org"
+                  target="_blank"
+                  ><u>www.madiha.org</u></a
+                >.
               </p>
             </div>
           </div>
@@ -394,8 +476,8 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"
+      integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw"
       crossorigin="anonymous"
     ></script>
     <script src="js/countdown.js"></script>
