--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -91,6 +91,7 @@
           height="500"
           frameborder="0"
           style="border:0"
+          title="Location of Heritage Institute of Technology, Kolkata."
           allowfullscreen
         ></iframe>
         <!--
@@ -126,7 +127,12 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card" data-toggle="modal" data-target="#modal-one">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/1.webp" /></div>
+                  <div class="img">
+                    <img
+                      src="img/speakers/1.webp"
+                      alt="Sanjiv Mehta's portrait."
+                    />
+                  </div>
                   <h2>
                     Sanjiv Mehta<br /><span
                       >Country Manager, HP <br />
@@ -152,7 +158,12 @@
                 data-target="#modal-two"
               >
                 <div class="box">
-                  <div class="img"><img src="img/speakers/2.webp" /></div>
+                  <div class="img">
+                    <img
+                      src="img/speakers/2.webp"
+                      alt="Madiha Ahmed's portrait."
+                    />
+                  </div>
                   <h2>
                     Madiha Ahmed<br /><span>Youth Mentor at OpenHearts</span>
                   </h2>
@@ -230,7 +241,11 @@
         </div>
 
         <figure class="no-padding no-margin">
-          <img src="img/banner.webp" class="banner" />
+          <img
+            src="img/banner.webp"
+            class="banner"
+            alt="TEDx HIT Kolkata's event banner."
+          />
           <figcaption>
             <small style="color:#ffffff;"
               >linkedin.com/in/ayushagarwal28/</small
@@ -301,10 +316,14 @@
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
               <p>
                 SHARE
-                <a href="https://facebook.com/sharer/sharer.php"
+                <a
+                  href="https://facebook.com/sharer/sharer.php"
+                  aria-label="Share this website on Facebook."
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href="" aria-label="Share this website on Twitter."
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
@@ -314,18 +333,21 @@
                   rel="noreferrer noopener"
                   href="https://facebook.com/tedxhitkolkata/"
                   target="_blank"
+                  aria-label="Follow us on Facebook."
                   ><i class="fab fa-facebook"></i
                 ></a>
                 <a
                   rel="noreferrer noopener"
                   href="https://twitter.com/hitkolkata"
                   target="_blank"
+                  aria-label="Follow us on Twitter."
                   ><i class="fab fa-twitter"></i
                 ></a>
                 <a
                   rel="noreferrer noopener"
                   href="https://instagram.com/tedx_hitkolkata/"
                   target="_blank"
+                  aria-label="Follow us on Instagram."
                   ><i class="fab fa-instagram" aria-hidden="true"></i
                 ></a>
               </p>
@@ -389,7 +411,7 @@
               <button type="button" class="close" data-dismiss="modal">
                 &times;
               </button>
-              <img src="img/speakers/1.webp" />
+              <img src="img/speakers/1.webp" alt="Sanjiv Mehta's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Sanjiv Mehta</h3>
                 Country Manager, HP <br />
@@ -419,8 +441,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div id="modals-speaker" class="font__open-sans">
       <div class="modal fade" id="modal-two" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -428,7 +448,7 @@
               <button type="button" class="close" data-dismiss="modal">
                 &times;
               </button>
-              <img src="img/speakers/2.webp" />
+              <img src="img/speakers/2.webp" alt="Madiha Ahmed's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Madiha Ahmed</h3>
                 Youth Mentor at OpenHearts <br />
@@ -470,6 +490,7 @@
         </div>
       </div>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
