added the third speaker

--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
                   <h2>
                     Sanjiv Mehta<br /><span
                       >Country Manager, HP <br />
-                      Technologist</span
+                      Education, Healthcare & Startup's</span
                     >
                   </h2>
                   <hr />
                   <p>
-                    Sanjiv Mehta has 30+ Years in IT Industry with experience in
-                    Technology Sales, Business Development, Strategy & Planning
-                    with operation in multiple geographies.
+                    Sanjiv Mehta has spent 30+ Years in IT Industry with
+                    experience in Technology Sales, and Business Development.
                   </p>
                   <hr />
                 </div>
@@ -151,12 +150,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div
-                class="card"
-                class="card"
-                data-toggle="modal"
-                data-target="#modal-two"
-              >
+              <div class="card" data-toggle="modal" data-target="#modal-two">
                 <div class="box">
                   <div class="img">
                     <img
@@ -165,12 +159,15 @@
                     />
                   </div>
                   <h2>
-                    Madiha Ahmed<br /><span>Youth Mentor at OpenHearts</span>
+                    Madiha Ahmed<br /><span
+                      >Youth Mentor at OpenHearts<br />TeachSDGs
+                      Ambassador</span
+                    >
                   </h2>
                   <hr />
                   <p>
-                    Madiha is a TeachSDGs Ambassador, Mentor at Global Thinkers
-                    Mentors Forum, Aspire Foundation and Jobs For Her.<br /><br />
+                    Madiha is a TeachSDGs Ambassador, mentor at the Global
+                    Thinkers Forum, the Aspire Foundation and Jobs For Her.<br />
                   </p>
                   <hr />
                   <!--
@@ -197,26 +194,25 @@
                 </div>
               </div>
             </div>
-            <!--
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
-              <div class="card">
+              <div class="card" data-toggle="modal" data-target="#modal-three">
                 <div class="box">
                   <div class="img"><img src="img/speakers/3.webp" /></div>
                   <h2>
-                    Sweta Ojha<br /><span
-                      >Writer <br />
-                      Feminist</span
-                    >
+                    Aaquib Hussain<br /><span
+                      >Co-Founder and Creative Head of <br />I And We
+                    </span>
                   </h2>
                   <hr />
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et.
+                    Aaquib Hussain is an entrepreneur and in a mere 1.5 years,
+                    he has built a business valued at 16.13 million USD.
                   </p>
                   <hr />
                 </div>
               </div>
             </div>
+            <!--
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card">
                 <div class="box">
@@ -476,7 +472,7 @@
                 building and nation building.<br /><br />
                 An Author of <b>"13 Inspirations@23"</b> The story of a young
                 woman who said no to being average," her book is soon to be
-                published.<br />
+                published.<br /><br />
                 Learn more about her at
                 <a
                   rel="noreferrer noopener"
@@ -484,6 +480,49 @@
                   target="_blank"
                   ><u>www.madiha.org</u></a
                 >.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="modal-three" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+                &times;
+              </button>
+              <img src="img/speakers/3.webp" alt="Madiha Ahmed's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Madiha Ahmed</h3>
+                Youth Mentor at OpenHearts <br />
+                Early Childhood Coding Instructor at WhiteHat Jr
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Aaquib Hussain, co-founder and creative head of I And We. An
+                exhausting 3.5 years of experience with
+                <b>IBM GBS, ISL (R&D), IBM – UCP, Vodafone</b> – Global & Europe
+                cutting across niche technologies like Cloud Security,
+                Cross-platform Application development, Machine Learning based
+                Algorithmic Support vector development, and interactional
+                integration with HR teams of 17 corporate houses, Aaquib
+                Represents the ephemeral geek of today.<br /><br />
+                He's a computer science graduate from Techno India group,
+                Research Internship from
+                <b>Jadavpur University, Kolkata and IIT Kharagpur</b
+                >.<br /><br />An entrepreneur for a mere 1.5 years, he has been
+                able to build a business valued at <b>16.13 million USD</b>. He
+                is the Founder and Creative Head at i&We, leading a team of 24
+                motivated young professionals, catering to a business spreading
+                across 11 states in a mere 500 days of operation, with 156k
+                paying clients in only its first year of business
+                realization.<br /><br />
+                Post being a TiE Speaker, an impending TEDx panel speaker, an
+                Innovator India under 25 alumni, 16 regional and national
+                Startup awards and acclaims, and an incubatee at a mindboggling
+                six leading accelerators of India.
               </p>
             </div>
           </div>
