--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card" data-toggle="modal" data-target="#modal-three">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/3.webp" /></div>
+                  <div class="img"><img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait."/></div>
                   <h2>
                     Aaquib Hussain<br /><span
                       >Co-Founder and Creative Head of <br />I And We
@@ -492,7 +492,7 @@
               <button type="button" class="close" data-dismiss="modal">
                 &times;
               </button>
-              <img src="img/speakers/3.webp" alt="Madiha Ahmed's portrait." />
+              <img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Madiha Ahmed</h3>
                 Youth Mentor at OpenHearts <br />
