--- a/index.html
+++ b/index.html
@@ -45,32 +45,51 @@
         id="landing-overlay-logo"
         src="img/logo.webp"
         class="img-responsive"
+        alt="TEDx HIT Kolkata's logo."
       />
       <div id="countdown-timer">
         <div class="countdown-timer-block">
           <div id="countdown-timer-days">73</div>
-          <span class="countdown-divider">:</span>
           <p class="countdown-description countdown-description-days">DAYS</p>
         </div>
+        <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
           <div id="countdown-timer-hours">14</div>
-          <span class="countdown-divider">:</span>
           <p class="countdown-description">HOURS</p>
         </div>
+        <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
           <div id="countdown-timer-minutes">42</div>
-          <span class="countdown-divider">:</span>
           <p class="countdown-description">MINUTES</p>
         </div>
+        <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
           <div id="countdown-timer-seconds">23</div>
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
       <div id="overlay-social">
-        <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
-        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+        <a
+          rel="noreferrer noopener"
+          href="https://facebook.com/tedxhitkolkata/"
+          target="_blank"
+          aria-label="Follow us on Facebook."
+          ><i class="fab fa-facebook"></i
+        ></a>
+        <a
+          rel="noreferrer noopener"
+          href="https://twitter.com/hitkolkata"
+          target="_blank"
+          aria-label="Follow us on Twitter."
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a
+          rel="noreferrer noopener"
+          href="https://instagram.com/tedx_hitkolkata/"
+          target="_blank"
+          aria-label="Follow us on Instagram."
+          ><i class="fab fa-instagram" aria-hidden="true"></i
+        ></a>
       </div>
       <button id="explore-button" class="btn">EXPLORE</button>
     </div>
@@ -197,7 +216,12 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card" data-toggle="modal" data-target="#modal-three">
                 <div class="box">
-                  <div class="img"><img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait."/></div>
+                  <div class="img">
+                    <img
+                      src="img/speakers/3.webp"
+                      alt="Aaquib Hussain's portrait."
+                    />
+                  </div>
                   <h2>
                     Aaquib Hussain<br /><span
                       >Co-Founder and Creative Head of <br />I And We
