added the image and all img in jpg format - will apply jpg fallback for ff and IE later

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <p class="countdown-description">SECONDS</p>
         </div>
       </div>
+      <img id="landing-overlay-image" src="img/bg.png" alt="Theme banner." />
       <div id="overlay-social">
         <a
           rel="noreferrer noopener"
