added extra team members

--- a/index.html
+++ b/index.html
@@ -279,7 +279,12 @@
           <p>Meet the people who brought it all together.</p>
           <hr class="small-hr" />
           <br />
-          <div id="container-team"></div>
+          <div id="container-team"></div>  
+        </div>
+        <div class="container font__open-sans no-padding">
+            <hr class="small-hr" />
+            <p>You can find the complete team <a href="team/index.html" aria-label="Team members list."><u>here</u></a>.</p>
+            <hr class="small-hr" />
         </div>
         <!--
           <div class="container">
@@ -519,9 +524,8 @@
               </button>
               <img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait." />
               <div class="modal-title font-bolder">
-                <h3 class="font-bolder">Madiha Ahmed</h3>
-                Youth Mentor at OpenHearts <br />
-                Early Childhood Coding Instructor at WhiteHat Jr
+                <h3 class="font-bolder">Aaquib Hussain</h3>
+                Co-Founder and Creative Head of <br />I And We
               </div>
             </div>
             <div class="modal-body">
@@ -566,6 +570,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/countdown.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js">getTeam('js/extra_team.json');</script>
+    <script>
+        
+    </script>
   </body>
 </html>
