fixed extra team page

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
         <div class="container font__open-sans no-padding">
             <hr class="small-hr" />
-            <p>You can find the complete team <a href="team/index.html" aria-label="Team members list."><u>here</u></a>.</p>
+            <p>You can find the complete team <a href="team/index.html" target="_blank" aria-label="Team members list."><u>here</u></a>.</p>
             <hr class="small-hr" />
         </div>
         <!--
@@ -441,7 +441,7 @@
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Sanjiv Mehta</h3>
                 Country Manager, HP <br />
-                Technologist
+                Education, Healthcare & Startup's
               </div>
             </div>
             <div class="modal-body">
