--- a/team/index.html
+++ b/team/index.html
@@ -42,6 +42,11 @@
       media="screen"
       href="../css/fonts.css"
     />
+    <style>
+        body{
+            overflow-x: hidden;
+        }
+    </style>
   </head>
 
   <body>
