added about page and increased image size on landing page by 10%

--- a/team/index.html
+++ b/team/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="TED is a nonprofit organization devoted to Ideas Worth Spreading."
+      content="TEDx HITK aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
     />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
@@ -115,9 +115,9 @@
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
             <h4 class="font-bolder">ABOUT</h4>
             <p>
-              <a href="">TED</a><br />
-              <a href="">TEDx</a><br />
-              <a href="">TEDxHITKolkata</a>
+              <a href="../about.html" target="_blank">TED</a><br />
+              <a href="../about.html" target="_blank">TEDx</a><br />
+              <a href="../about.html" target="_blank">TEDxHITKolkata</a>
             </p>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
