added open graph meta tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="TEDx HITK aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
+      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
     />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
+    <meta property="og:title" content="TEDxHITKolkata"/>
+    <meta property="og:type" content="website"/>
+    <meta
+      property="description"
+      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
+    />
+    <meta property=”og:image” content="https://tedxhitkolkata.com/img/fb.jpg"/>
+    <meta property=”og:url” content="https://tedxhitkolkata.com/"/>
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link
       rel="stylesheet"
