--- a/team/index.html
+++ b/team/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="TEDx HITK aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
+      content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
     />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
