--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       property="description"
       content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
     />
-    <meta property=”og:image” content="https://tedxhitkolkata.com/img/fb.jpg"/>
-    <meta property=”og:url” content="https://tedxhitkolkata.com/"/>
+    <meta property="og:image" content="https://tedxhitkolkata.com/img/fb.jpg"/>
+    <meta property="og:url" content="https://tedxhitkolkata.com/"/>
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link
       rel="stylesheet"
