fixed bug - async defer

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
       media="screen"
       href="css/fonts.css"
     />
-    <script async defer
+    <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
@@ -572,15 +572,16 @@
 
     <scrip>
     </scrip>
-    <script async defer
+    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"
       integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw"
       crossorigin="anonymous"
     ></script>
     <script async defer src="js/countdown.js"></script>
     <script async defer src="js/script.js"></script>
+    <script src="js/lazyload.js"></script>
     <script>
-        
+        $("img").lazyload();
     </script>
   </body>
 </html>
